Bug 362195 - Massive spam from libktorrent/src/peer/authenticate[base].cpp
Summary: Massive spam from libktorrent/src/peer/authenticate[base].cpp
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-24 17:18 UTC by Hrvoje Senjan
Modified: 2016-10-06 21:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2016-04-24 17:18:26 UTC
Please hide the debug at least behind qCDebug.
Otherwise there a milions of line, such as:

ned tra 24 19:14:25 2016: Initiating connection to 93.142.241.151 via (TCP)
ned tra 24 19:14:25 2016: Piece cache: memory in use 0 B, memory freed 48,00 KiB
ned tra 24 19:14:26 2016: Authentication to 93.142.241.151 : failure
ned tra 24 19:14:26 2016: PEX: found 0 peers
ned tra 24 19:14:27 2016: Timeout occurred
ned tra 24 19:14:27 2016: Authentication to 84.107.151.160 : failure
ned tra 24 19:14:27 2016: Timeout occurred
ned tra 24 19:14:27 2016: Authentication to 121.32.127.181 : failure
ned tra 24 19:14:29 2016: Timeout occurred
ned tra 24 19:14:29 2016: Authentication to 73.134.164.102 : failure
ned tra 24 19:14:29 2016: Initiating connection to 73.134.164.102 via (TCP)
ned tra 24 19:14:29 2016: Timeout occurred
ned tra 24 19:14:29 2016: Authentication to 188.210.181.124 : failure
ned tra 24 19:14:29 2016: Initiating connection to 188.210.181.124 via (TCP)
ned tra 24 19:14:31 2016: PEX: found 0 peers

Reproducible: Always
Comment 1 Martin Sandsmark 2016-10-06 21:44:52 UTC
Git commit a65d69e68ad860601c23bc7d4dadbded10a81072 by Martin T. H. Sandsmark.
Committed on 06/10/2016 at 21:43.
Pushed by sandsmark into branch 'master'.

Fix logging framework spamming

3945a53ba65125b430e1f681deb2558d01ab052a forced the logging framework to
always print all log information (including debug logs) to standard out,
this makes it respect the to_stdout again.

M  +1    -1    src/util/log.cpp

http://commits.kde.org/libktorrent/a65d69e68ad860601c23bc7d4dadbded10a81072