Fix logging framework spamming

3945a53ba65125b430e1f681deb2558d01ab052a forced the logging framework to
always print all log information (including debug logs) to standard out,
this makes it respect the to_stdout again.

BUG: 362195