src/util/log.cpp
@@ -276,7 +276,7 @@ namespace bt
 	void InitLog(const QString & file,bool rotate,bool handle_qt_messages,bool to_stdout)
 	{
 		global_log->setOutputFile(file,rotate,handle_qt_messages);
-		global_log->setOutputToConsole(true);
+		global_log->setOutputToConsole(to_stdout);
 	}
 
 	void AddLogMonitor(LogMonitorInterface* m)
